html and css loaders, issue with publicPath in extract loader

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class="profile">
-            <img src="../images/cat.jpg" alt="">
+            <img src="./images/cat.jpg" alt="">
             <h1>Hello World</h1>
         </div>
         <script src="main-bundle.js"></script>
